--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ simdutf8 = { version = "0.1.3" }
 indicatif = "0.16.2"
 triple_accel = "0.4.0"
 # rayon = "1.5.1"
-# twox-hash = "1.6.1"
+twox-hash = "1.6.1"
 clap = { version = "3.0.8", features = ["derive", "color", "suggestions"] }
 flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
-# hashbrown = "0.12.0"
+hashbrown = "0.12.0"
