--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ twox-hash = "1.6.1"
 clap = { version = "3.0.8", features = ["derive", "color", "suggestions"] }
 flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
 hashbrown = "0.12.0"
+crossbeam = "0.8.1"
